--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+
 ### STS ###
 .apt_generated
 .classpath
@@ -37,4 +38,4 @@ out/
 .vscode/
 
 ###
-src/main/resources/application.yml
+src/main/resources/*
