--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,16 @@ repositories {
 
 ext["mysql.version"] = "8.0.22"
 ext["hibernate.version"] = "5.4.20.Final"
+ext {
+	set('springBootAdminVersion', "2.3.1")
+}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'de.codecentric:spring-boot-admin-starter-client'
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-starter', version: '1.2.5.RELEASE'
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-storage', version: '1.2.5.RELEASE'
 	compileOnly 'org.projectlombok:lombok'
@@ -40,6 +44,11 @@ dependencies {
 	runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 }
 
+dependencyManagement {
+	imports {
+		mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
+	}
+}
 test {
 	useJUnitPlatform()
 }
